--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,14 @@
         </div>
     </div>
 </div>
-<main class="container-fluid clamp-width my-2 my-xl-0">
+<main class="clamp-width m-auto">
+    <h1 class="h1 mx-3 my-5 text-center main-page-description">
+        Chcesz wyjechać, ale nie masz z kim?
+        Jesteś w odpowiednim miejscu...
+        Wybierz podróż i zwiedzaj świat z wspaniałymi ludźmi!
+    </h1>
+</main>
+<section class="container-fluid clamp-width my-2 my-xl-0">
     <div class="row text-center my-3 mx-2 mx-xl-0">
         <div class="col-lg-6 col-xl-4 my-2 px-2" th:each="group: ${availableTravelGroups}">
             <a th:href="@{/group/details/__${group.id}__}" class="public-group-cell d-block h-100 d-flex flex-column">
@@ -56,7 +63,7 @@
             </a>
         </div>
     </div>
-</main>
+</section>
 
 <div th:replace="common/footer :: footer"></div>
 
