--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
 <main class="clamp-width m-auto">
     <h1 class="h1 mx-3 my-5 text-center main-page-description">
         Chcesz wyjechać, ale nie masz z kim?
-        Jesteś w odpowiednim miejscu...
+        Jesteś w odpowiednim miejscu.
         Wybierz podróż i zwiedzaj świat z wspaniałymi ludźmi!
     </h1>
 </main>
