--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -26,11 +26,11 @@
 </head>
 <body>
 <form th:action="@{/}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Przejdź do strony logowania</button>
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Przejdź do strony głównej</button>
 </form>
 
 <div class="container">
-    <div class="row">
+    <div class="row my-3">
         <div class="col-md-6 col-md-offset-3">
             <form autocomplete="off" action="#" th:action="@{/change-password}"
                   th:object="${changePasswordDto}" method="post" class="form-horizontal"
