--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -20,17 +20,17 @@
     <!-- DataTables CSS -->
     <link rel="stylesheet" th:href="@{/css/addons/datatables.min.css}"/>
     <!-- DataTables JS -->
-    <script rel="stylesheet" th:href="@{/js/addons/datatables.min.js}" ></script>
+    <script rel="stylesheet" th:href="@{/js/addons/datatables.min.js}"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 <form th:action="@{/}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
+    <button class="btn btn-md btn-warning btn-block" type="Submit">Przejdź do strony głównej</button>
 </form>
 
 <div class="container">
-    <div class="row">
+    <div class="row my-3">
         <div class="col-md-6 col-md-offset-3">
             <form autocomplete="off" action="#" th:action="@{/edit-profile}"
                   th:object="${editProfileDto}" method="post" class="form-horizontal"
@@ -41,38 +41,40 @@
                         <label th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
                                class="validation-message"></label>
                         <input type="text" th:field="*{firstName}" placeholder="Imię"
-                               class="form-control" />
+                               class="form-control"/>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
-                                  class="validation-message"></label>
+                        <label th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
+                               class="validation-message"></label>
                         <input type="text" th:field="*{lastName}"
-                               placeholder="Nazwisko" class="form-control" />
+                               placeholder="Nazwisko" class="form-control"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
                         <input type="text" th:field="*{avatarUrl}" placeholder="Avatar url"
-                               class="form-control" /> <label
+                               class="form-control"/> <label
                             th:if="${#fields.hasErrors('avatarUrl')}" th:errors="*{avatarUrl}"
-                            class="validation-message"></label>
+                            class="validation-message" th:maxlength="490"></label>
                     </div>
                 </div>
-                <button class="btn blue text-white btn-block my-4" type="submit">Zapisz</button>
 
+                <button class="btn blue text-white my-4" type="submit">Zapisz</button>
 
                 <div class="form-group">
-                    <div class="col-sm-9">
-                        <a th:href="@{/change-password}">Zmień hasło</a>
-                    </div>
+                    <a th:href="@{/change-password}" class="btn blue text-white">Zmień hasło</a>
                 </div>
-
 
 
             </form>
+        </div>
+        <div class="col-md-3 m-5">
+            <img th:src="${AVATAR_URL}" onError="this.onerror=null;this.src='/img/default-avatar.png'"
+                 class="rounded-circle z-depth-0"
+                 alt="avatar image" height="100%" width="100%">
         </div>
     </div>
 </div>
