--- a/src/main/resources/templates/expense/expenses.html
+++ b/src/main/resources/templates/expense/expenses.html
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <hr>
-                    <button class="btn btn-blue btn-block my-4 waves-effect z-depth-0" type="submit" id="paybtn">Wyślij</button>
+                    <button class="btn btn-blue my-4 waves-effect z-depth-0" type="submit" id="paybtn">Wyślij</button>
                     </form>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                         <!--</table>-->
                         <!--&lt;!&ndash; Table  &ndash;&gt;-->
                     <!--</div>-->
-                    <!--<button class="btn btn-blue btn-block my-4 waves-effect z-depth-0" type="submit">Utworz</button>-->
+                    <!--<button class="btn btn-blue my-4 waves-effect z-depth-0" type="submit">Utworz</button>-->
                 <!--</div>-->
             <!--</div>-->
         </div>
@@ -246,7 +246,7 @@
 
                     <!--<div class="form-group">-->
                         <!--<div class="col-sm-9">-->
-                            <!--<button type="submit" class="btn btn-primary btn-block" id="paybtn">Zapłać!</button>-->
+                            <!--<button type="submit" class="btn btn-primary" id="paybtn">Zapłać!</button>-->
                         <!--</div>-->
                     <!--</div>-->
 
