--- a/src/main/resources/templates/group/groupDetails.html
+++ b/src/main/resources/templates/group/groupDetails.html
@@ -115,7 +115,7 @@
                                                 <button type="submit "
                                                         th:disabled="${!viewerIsOrganizer}"
                                                         th:hidden="${!viewerIsOrganizer}"
-                                                        class="btn btn-blue btn-block my-2 waves-effect z-depth-0">
+                                                        class="btn btn-blue mt-4 mx-0 waves-effect z-depth-0">
                                                     Zapisz zmiany
                                                 </button>
                                             </div>
