--- a/src/main/resources/templates/group/groupDetailsPlanning.html
+++ b/src/main/resources/templates/group/groupDetailsPlanning.html
@@ -138,14 +138,14 @@
                                                             <div class="col">
                                                                 <button id="createQuestionBtn"
                                                                         type="button"
-                                                                        class="btn btn-blue btn-block my-2 waves-effect z-depth-0">
+                                                                        class="btn btn-blue my-2 waves-effect z-depth-0">
                                                                     Utwórz ankietę
                                                                 </button>
                                                             </div>
                                                             <div class="col">
                                                                 <button id="moreAnswers"
                                                                         type="button"
-                                                                        class="btn btn-amber btn-block my-2 waves-effect z-depth-0">
+                                                                        class="btn btn-amber my-2 waves-effect z-depth-0">
                                                                     Dodaj propozycję
                                                                 </button>
                                                             </div>
