--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -90,7 +90,7 @@
                             <!-- Table  -->
                         </div>
                         <!-- Sign in button -->
-                        <button class="btn btn-blue btn-block my-4 waves-effect z-depth-0" type="submit">Utwórz</button>
+                        <button class="btn btn-blue my-4 waves-effect z-depth-0" type="submit">Utwórz</button>
                     </form>
                     <!-- Form -->
                 </div>
