--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -25,9 +25,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-<form th:action="@{/}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Przejdź do strony głównej</button>
-</form>
+<div th:replace="common/header :: header"></div>
 
 <div class="container">
     <div class="row my-3">
@@ -57,7 +55,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <button type="submit" class="btn btn-primary btn-block">Zmień</button>
+                        <button type="submit" class="btn btn-primary">Zmień</button>
                     </div>
                 </div>
 
@@ -68,6 +66,7 @@
         </div>
     </div>
 </div>
+<div th:replace="common/footer :: footer"></div>
 
 </body>
 </html>
