--- a/src/main/resources/templates/friend/blocked.html
+++ b/src/main/resources/templates/friend/blocked.html
@@ -118,7 +118,7 @@
 
                                                             <div class="form-group">
                                                                 <button type="submit"
-                                                                        class="btn btn-blue btn-block my-2 waves-effect z-depth-0">
+                                                                        class="btn btn-blue my-2 waves-effect z-depth-0">
                                                                     Zablokuj
                                                                 </button>
                                                             </div>
