--- a/src/main/resources/templates/group/groupDetailsExpenses.html
+++ b/src/main/resources/templates/group/groupDetailsExpenses.html
@@ -105,7 +105,7 @@
 
                     <div class="form-group">
                         <div class="col-sm-9">
-                            <button type="button" class="btn btn-primary btn-block"
+                            <button type="button" class="btn btn-primary"
                                     th:onclick="'createExpense(\'\');'">Dodaj</button>
                         </div>
                     </div>
