--- a/src/main/resources/templates/group/groupDetailsMembers.html
+++ b/src/main/resources/templates/group/groupDetailsMembers.html
@@ -194,7 +194,7 @@
                                                                 <!-- Table  -->
                                                             </div>
                                                             <!-- Sign in button -->
-                                                            <button class="btn btn-blue btn-block waves-effect z-depth-0 mb-1"
+                                                            <button class="btn btn-blue waves-effect z-depth-0 mb-1"
                                                                     type="submit">Dodaj
                                                             </button>
                                                         </form>
