--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,7 +43,7 @@
                 <input type="password" id="password" name="password" class="form-control mb-4" th:placeholder="Hasło">
 
                 <!-- Sign in button -->
-                <button class="btn blue text-white btn-block my-4" type="submit">Zaloguj</button>
+                <button class="btn blue text-white my-4" type="submit">Zaloguj</button>
 
 
                 <div class="d-flex justify-content-around">
