--- a/src/main/resources/templates/notification/invitations.html
+++ b/src/main/resources/templates/notification/invitations.html
@@ -49,7 +49,7 @@
 
                         <div class="form-group">
                             <div class="col-sm-9">
-                                <button type="submit" class="btn btn-primary btn-block">Przyjmij</button>
+                                <button type="submit" class="btn btn-primary">Przyjmij</button>
                             </div>
                         </div>
 
