--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -25,9 +25,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-<form th:action="@{/}" method="get">
-    <button class="btn btn-md btn-warning btn-block" type="Submit">Przejdź do strony głównej</button>
-</form>
+<div th:replace="common/header :: header"></div>
 
 <div class="container">
     <div class="row my-3">
@@ -78,6 +76,7 @@
         </div>
     </div>
 </div>
+<div th:replace="common/footer :: footer"></div>
 
 </body>
 </html>
