--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -20,52 +20,47 @@
     <!-- DataTables CSS -->
     <link rel="stylesheet" th:href="@{/css/addons/datatables.min.css}"/>
     <!-- DataTables JS -->
-    <script rel="stylesheet" th:href="@{/js/addons/datatables.min.js}" ></script>
+    <script rel="stylesheet" th:href="@{/js/addons/datatables.min.js}"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 <div th:replace="common/header :: header"></div>
 
-<div class="container">
-    <div class="row my-3">
-        <div class="col-md-6 col-md-offset-3">
-            <form autocomplete="off" action="#" th:action="@{/change-password}"
-                  th:object="${changePasswordDto}" method="post" class="form-horizontal"
+<div class="container h-100">
+
+    <div class="row justify-content-center align-middle">
+        <div class="col-md-6 mt-5">
+            <form class="jumbotron text-center border border-light p-5 justify-content-center"
+                  autocomplete="off" action="#" th:action="@{/change-password}"
+                  th:object="${changePasswordDto}" method="post"
                   role="form">
-                <h2>Zmiana hasła</h2>
+                <div class="valid-feedback m-3" th:utext="${successMessage}"></div>
+                <h2 class="h2 my-4">Zmiana hasła</h2>
                 <div class="form-group">
-                    <div class="col-sm-9">
-                        <input type="password" th:field="*{oldPassword}" placeholder="Stare hasło"
-                               class="form-control" />
-                        <label th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}"
-                               class="validation-message"></label>
-                    </div>
+                    <label th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}"
+                           class="validation-message invalid-feedback"></label>
+                    <input type="password" th:field="*{oldPassword}" placeholder="Stare hasło"
+                           class="form-control"/>
                 </div>
 
                 <div class="form-group">
-                    <div class="col-sm-9">
-                        <label	th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"
-                                  class="validation-message"></label>
-                        <input type="password" th:field="*{newPassword}"
-                               placeholder="Nowe hasło" class="form-control" />
-                    </div>
+                    <label th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"
+                           class="validation-message invalid-feedback"></label>
+                    <input type="password" th:field="*{newPassword}"
+                           placeholder="Nowe hasło" class="form-control"/>
                 </div>
-
 
                 <div class="form-group">
-                    <div class="col-sm-9">
-                        <button type="submit" class="btn btn-primary">Zmień</button>
-                    </div>
+                    <button type="submit" class="btn btn-primary">Zmień</button>
                 </div>
-
                 <span th:utext="${successMessage}"></span>
-
-
             </form>
         </div>
     </div>
 </div>
+
+
 <div th:replace="common/footer :: footer"></div>
 
 </body>
