--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -28,54 +28,61 @@
 <div th:replace="common/header :: header"></div>
 
 <div class="container">
-    <div class="row my-3">
-        <div class="col-md-6 col-md-offset-3">
-            <form autocomplete="off" action="#" th:action="@{/edit-profile}"
-                  th:object="${editProfileDto}" method="post" class="form-horizontal"
-                  role="form">
-                <h2>Twoje dane</h2>
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <label th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
-                               class="validation-message"></label>
-                        <input type="text" th:field="*{firstName}" placeholder="Imię"
-                               class="form-control"/>
+
+    <div class="row justify-content-center align-middle mt-5">
+        <form class="form-horizontal jumbotron text-center border border-light p-5 justify-content-center"
+              autocomplete="off" action="#" th:action="@{/edit-profile}"
+              th:object="${editProfileDto}" method="post"
+              role="form">
+            <h2 class="h2 my-4">Twoje dane</h2>
+
+            <div class="row">
+                <div class="col-sm-8">
+
+                    <div class="form-group">
+                        <div>
+                            <label th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
+                                   class="validation-message invalid-feedback"></label>
+                            <input type="text" th:field="*{firstName}" placeholder="Imię"
+                                   class="form-control"/>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div>
+                            <label th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
+                                   class="validation-message invalid-feedback"></label>
+                            <input type="text" th:field="*{lastName}"
+                                   placeholder="Nazwisko" class="form-control"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div>
+                            <input type="text" th:field="*{avatarUrl}" placeholder="Avatar url"
+                                   class="form-control"/> <label
+                                th:if="${#fields.hasErrors('avatarUrl')}" th:errors="*{avatarUrl}"
+                                class="validation-message" th:maxlength="490"></label>
+                        </div>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <label th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
-                               class="validation-message"></label>
-                        <input type="text" th:field="*{lastName}"
-                               placeholder="Nazwisko" class="form-control"/>
+                <div class="col-sm-4">
+                    <div class="mx-4">
+                        <img th:src="${AVATAR_URL}" onError="this.onerror=null;this.src='/img/default-avatar.png'"
+                             class="rounded-circle z-depth-0"
+                             alt="avatar image" height="100%" width="100%">
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-9">
-                        <input type="text" th:field="*{avatarUrl}" placeholder="Avatar url"
-                               class="form-control"/> <label
-                            th:if="${#fields.hasErrors('avatarUrl')}" th:errors="*{avatarUrl}"
-                            class="validation-message" th:maxlength="490"></label>
-                    </div>
-                </div>
+            </div>
 
+            <div class="form-row justify-content-between">
                 <button class="btn blue text-white my-4" type="submit">Zapisz</button>
-
-                <div class="form-group">
-                    <a th:href="@{/change-password}" class="btn blue text-white">Zmień hasło</a>
-                </div>
-
-
-            </form>
-        </div>
-        <div class="col-md-3 m-5">
-            <img th:src="${AVATAR_URL}" onError="this.onerror=null;this.src='/img/default-avatar.png'"
-                 class="rounded-circle z-depth-0"
-                 alt="avatar image" height="100%" width="100%">
-        </div>
+                <a th:href="@{/change-password}" class="btn btn-amber text-white my-4">Zmień hasło</a>
+            </div>
+        </form>
     </div>
 </div>
+
 <div th:replace="common/footer :: footer"></div>
 
 </body>
