--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,6 @@
 .my-custom-scrollbar {
     position: relative;
-    max-height: 10rem;
+    max-height: 65vh;
     min-height: 40vh;
     overflow: auto;
 }
@@ -11,8 +11,8 @@
 
 .sm-custom-scrollbar {
     position: relative;
-    max-height: 10rem;
-    min-height: 20rem;
+    max-height: 30rem;
+    min-height: 25rem;
     overflow: auto;
 }
 
