--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -108,3 +108,8 @@ nav {
     display: block;
     font-size: 1.3em;
 }
+@media (min-width: 1600px){
+    .container {
+        max-width: 1300px;
+    }
+}
