--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -29,7 +29,9 @@
 <!--Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark blue lighten-1" th:fragment="header">
     <div class="clamp-width m-auto d-flex w-100">
-        <a class="navbar-brand mr-5 ml-1" href="#">On The Way</a>
+        <a class="navbar-brand mr-5 ml-1 p-0" href="#">
+            <img src="/img/logo.png" height="40">
+        </a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
                 data-target="#navbarSupportedContent-555"
                 aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
