--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -42,15 +42,15 @@
                 </button>
             </div>
 
-            <form class="modal-body" autocomplete="off" action="#" th:action="@{/group}" th:object="${newTravelGroup}" method="post" role="form">
+            <form class="modal-body" autocomplete="off" th:action="@{/group}" th:object="${newTravelGroup}" method="post" action="#!" novalidate>
                 <div class="text-center">
 
                     <!-- Email -->
                     <div class="md-form p-3">
-                        <input type="text" th:field="*{name}" class="form-control" id="groupName"
-                               placeholder="*Nazwa grupy" required/>
                         <label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-                               class="validation-message" for="groupName"></label>
+                               class="validation-message invalid-feedback" for="groupName"></label>
+                        <input type="text" th:field="*{name}" class="form-control" id="groupName"
+                               placeholder="*Nazwa grupy"/>
                     </div>
                     <!-- Table  -->
                     <div class="table-wrapper-scroll-y sm-custom-scrollbar overflow-auto p-3 ">
